--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1526,12 +1526,13 @@ article.post > .toolbar {
     justify-content: space-between;
     margin-bottom: 1rem;
     padding-left: 0.65rem;
+    max-width: 390px;
 }
-article.post > .toolbar > div {
+/* article.post > .toolbar > div {
     display: flex;
     flex: 1;
-}
-article.post > .toolbar > div:first-child {
+} */
+/* article.post > .toolbar > div:first-child {
     justify-content: flex-start;
 }
 article.post > .toolbar > div:last-child {
@@ -1542,7 +1543,7 @@ article.post > .toolbar > div:first-child  * {
 }
 article.post > .toolbar > div:last-child * {
     justify-content: flex-end;
-}
+} */
 
 section.comments {
     font-size: 0.9rem;
@@ -1727,11 +1728,11 @@ a.show-more:hover { /* Shim for old show more button element */
 .button.post-toolbar-button {
     background: #fff;
     color: #aaa;
-    min-width: 40px;
-    max-width: 80px;
     flex: 1;
     display: flex;
     align-items: center;
+    width: 40px;
+    justify-content: center;
 }
 .button.post-toolbar-button:hover {
     background: #fff;
@@ -1748,13 +1749,6 @@ a.show-more:hover { /* Shim for old show more button element */
 }
 .button.comment-toolbar-button:hover {
     color: #ce1717;
-}
-
-.post-toolbar-form {
-    min-width: 40px;
-    max-width: 80px;
-    flex: 1;
-    display: flex;
 }
 
 .abbreviated-content:not(.content-warning-content)::after {
