--- a/views/partials/posts_v2.handlebars
+++ b/views/partials/posts_v2.handlebars
@@ -121,14 +121,14 @@
         </div>
         {{#contains this.subscribedUsers ../loggedInUserData._id}}
             <div class="toolbar-button-container">
-                <button type="button" class="button post-toolbar-button subscribe-post" data-post-id="{{this._id}}" data-toggle="tooltip" data-placement="left" title="Receiving notifications (click to change)">
+                <button type="button" class="button post-toolbar-button unsubscribe-post" data-post-id="{{this._id}}" data-toggle="tooltip" data-placement="left" title="Receiving notifications (click to change)">
                     <i class="far fa-bell"></i>
                 </button>
             </div>
         {{/contains}}
         {{#contains this.unsubscribedUsers ../loggedInUserData._id}}
         	<div class="toolbar-button-container">
-                <button type="button" class="button post-toolbar-button unsubscribe-post" data-post-id="{{this._id}}" data-toggle="tooltip" data-placement="left" title="Not receiving notifications (click to change)">
+                <button type="button" class="button post-toolbar-button subscribe-post" data-post-id="{{this._id}}" data-toggle="tooltip" data-placement="left" title="Not receiving notifications (click to change)">
                     <i class="far fa-bell-slash"></i>
                 </button>
             </div>
