--- a/views/partials/posts_v2.handlebars
+++ b/views/partials/posts_v2.handlebars
@@ -116,7 +116,7 @@
         {{/eq}}
         <div class="toolbar-button-container">
             <a class="button post-toolbar-button" href="/{{this.author.username}}/{{this.url}}">
-              <i class="fas fa-link"></i>
+              <i class="far fa-sticky-note"></i>
             </a>
         </div>
         {{#contains this.subscribedUsers ../loggedInUserData._id}}
