Most of a functioning 'notify comment parents' system

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1570,8 +1570,11 @@ article.post > .toolbar > div:last-child * {
 
 section.comments {
     font-size: 0.9rem;
-    display: none;
     margin: 0 1rem;
+}
+
+section.comments:not(.single-post-comments) {
+    display: none;
 }
 
 article.comment {
