--- a/views/singlepost.handlebars
+++ b/views/singlepost.handlebars
@@ -26,7 +26,7 @@
 
 <script>
 $(function() {
-  $(".comments").show();
+  // $(".comments").show();
   if ($('.post-images').length > 0) {
       var imagesLoaded = $('.post-single-image').length;
       console.log("images loaded: " + imagesLoaded);
