--- a/views/partials/scripts.handlebars
+++ b/views/partials/scripts.handlebars
@@ -10,9 +10,7 @@
 
             if((bottom_of_screen > top_of_element) && (top_of_screen < bottom_of_element)){
                 element.addClass('flash')
-                // setTimeout(function(){
-                //     element.removeClass('flash')
-                // }, 2000);
+                console.log("Flash dat comment")
             }
         });
     });
