--- a/views/partials/usersidebar.handlebars
+++ b/views/partials/usersidebar.handlebars
@@ -31,9 +31,11 @@
   </div>
 {{/if}}
 {{#if profileData.aboutParsed}}
-  <p>
-    {{{profileData.aboutParsed}}}
-  </p>
+    <section class="profile-about">
+        <p>
+          {{{profileData.aboutParsed}}}
+        </p>
+    </section>
 {{/if}}
 {{#if profileData.pronouns}}
   <p>
